public/lite/api/en/r2.3.0rc1/_sources/generate/program_listing_file_include_runtime_include_c_api_model_c.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_runtime_include_c_api_model_c.h:

Program Listing for File model_c.h
==================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_runtime_include_c_api_model_c.h>` (``include/runtime/include/c_api/model_c.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   #ifndef MINDSPORE_INCLUDE_C_API_MODEL_C_H
   #define MINDSPORE_INCLUDE_C_API_MODEL_C_H
   
   #include "include/c_api/tensor_c.h"
   #include "include/c_api/context_c.h"
   #include "include/c_api/status_c.h"
   
   #ifdef __cplusplus
   extern "C" {
   #endif
   
   typedef void *MSModelHandle;
   
   typedef void *MSTrainCfgHandle;
   
   typedef struct MSTensorHandleArray {
     size_t handle_num;
     MSTensorHandle *handle_list;
   } MSTensorHandleArray;
   
   #define MS_MAX_SHAPE_NUM 32
   typedef struct MSShapeInfo {
     size_t shape_num;
     int64_t shape[MS_MAX_SHAPE_NUM];
   } MSShapeInfo;
   
   typedef struct MSCallBackParamC {
     char *node_name;
     char *node_type;
   } MSCallBackParamC;
   
   typedef bool (*MSKernelCallBackC)(const MSTensorHandleArray inputs, const MSTensorHandleArray outputs,
                                     const MSCallBackParamC kernel_Info);
   
   MS_API MSModelHandle MSModelCreate();
   
   MS_API void MSModelDestroy(MSModelHandle *model);
   
   MS_API void MSModelSetWorkspace(MSModelHandle model, void *workspace, size_t workspace_size);
   
   MS_API size_t MSModelCalcWorkspaceSize(MSModelHandle model);
   
   MS_API MSStatus MSModelBuild(MSModelHandle model, const void *model_data, size_t data_size, MSModelType model_type,
                                const MSContextHandle model_context);
   
   MS_API MSStatus MSModelBuildFromFile(MSModelHandle model, const char *model_path, MSModelType model_type,
                                        const MSContextHandle model_context);
   
   MS_API MSStatus MSModelResize(MSModelHandle model, const MSTensorHandleArray inputs, MSShapeInfo *shape_infos,
                                 size_t shape_info_num);
   
   MS_API MSStatus MSModelPredict(MSModelHandle model, const MSTensorHandleArray inputs, MSTensorHandleArray *outputs,
                                  const MSKernelCallBackC before, const MSKernelCallBackC after);
   
   MS_API MSStatus MSModelRunStep(MSModelHandle model, const MSKernelCallBackC before, const MSKernelCallBackC after);
   
   MS_API MSStatus MSModelSetTrainMode(const MSModelHandle model, bool train);
   
   MS_API MSStatus MSModelExportWeight(const MSModelHandle model, const char *export_path);
   
   MS_API MSTensorHandleArray MSModelGetInputs(const MSModelHandle model);
   
   MS_API MSTensorHandleArray MSModelGetOutputs(const MSModelHandle model);
   
   MS_API MSTensorHandle MSModelGetInputByTensorName(const MSModelHandle model, const char *tensor_name);
   
   MS_API MSTensorHandle MSModelGetOutputByTensorName(const MSModelHandle model, const char *tensor_name);
   
   MS_API MSTrainCfgHandle MSTrainCfgCreate();
   
   MS_API void MSTrainCfgDestroy(MSTrainCfgHandle *train_cfg);
   
   MS_API char **MSTrainCfgGetLossName(MSTrainCfgHandle train_cfg, size_t *num);
   
   MS_API void MSTrainCfgSetLossName(MSTrainCfgHandle train_cfg, const char **loss_name, size_t num);
   
   MS_API MSOptimizationLevel MSTrainCfgGetOptimizationLevel(MSTrainCfgHandle train_cfg);
   
   MS_API void MSTrainCfgSetOptimizationLevel(MSTrainCfgHandle train_cfg, MSOptimizationLevel level);
   
   MS_API MSStatus MSTrainModelBuild(MSModelHandle model, const void *model_data, size_t data_size, MSModelType model_type,
                                     const MSContextHandle model_context, const MSTrainCfgHandle train_cfg);
   
   MS_API MSStatus MSTrainModelBuildFromFile(MSModelHandle model, const char *model_path, MSModelType model_type,
                                             const MSContextHandle model_context, const MSTrainCfgHandle train_cfg);
   
   MS_API MSStatus MSRunStep(MSModelHandle model, const MSKernelCallBackC before, const MSKernelCallBackC after);
   
   MS_API MSStatus MSModelSetLearningRate(MSModelHandle model, float learning_rate);
   
   MS_API float MSModelGetLearningRate(MSModelHandle model);
   
   MS_API MSTensorHandleArray MSModelGetWeights(MSModelHandle model);
   
   MS_API MSStatus MSModelUpdateWeights(MSModelHandle model, const MSTensorHandleArray new_weights);
   
   MS_API bool MSModelGetTrainMode(MSModelHandle model);
   
   MS_API MSStatus MSModelSetTrainMode(MSModelHandle model, bool train);
   
   MS_API MSStatus MSModelSetupVirtualBatch(MSModelHandle model, int virtual_batch_multiplier, float lr, float momentum);
   
   MS_API MSStatus MSExportModel(MSModelHandle model, MSModelType model_type, const char *model_file,
                                 MSQuantizationType quantization_type, bool export_inference_only,
                                 char **output_tensor_name, size_t num);
   
   MS_API MSStatus MSExportModelBuffer(MSModelHandle model, MSModelType model_type, char **model_data, size_t *data_size,
                                       MSQuantizationType quantization_type, bool export_inference_only,
                                       char **output_tensor_name, size_t num);
   
   MS_API MSStatus MSExportWeightsCollaborateWithMicro(MSModelHandle model, MSModelType model_type,
                                                       const char *weight_file, bool is_inference, bool enable_fp16,
                                                       char **changeable_weights_name, size_t num);
   
   #ifdef __cplusplus
   }
   #endif
   #endif  // MINDSPORE_INCLUDE_C_API_MODEL_C_H
